// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should match the snapshot with the administration form 1`] = `
<div
  className="jsx-2235865583 "
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
      style={
        Object {
          "marginLeft": "25px",
        }
      }
    >
      <h1
        className="jsx-2235865583 form-title"
      >
        Admin
      </h1>
    </div>
  </div>
  <form
    className="rjsf"
    noValidate={false}
    onSubmit={[Function]}
  >
    <div
      className="col-12"
    >
      <div
        className="form-row"
      >
        <span
          className="font-italic text-muted"
        />
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <span
              className="font-italic text-muted"
            />
            <div
              className="col-12"
            >
              <legend
                id="root_operator__title"
              >
                Operator Information
              </legend>
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_name"
              >
                Legal name
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_name"
                label="Legal name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="consequat Ut Duis"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_tradeName"
              >
                Trade name
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_tradeName"
                label="Trade name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="in qui"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_naics"
              >
                NAICS code
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_naics"
                label="NAICS code"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="in qui"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_bcCorporateRegistryNumber"
              >
                BC Corporate Registry number
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_bcCorporateRegistryNumber"
                label="BC Corporate Registry number"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="consequat Ut Duis"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_duns"
              >
                DUNS number
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_duns"
                label="DUNS number"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="451234512"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="col-12"
            >
              <div
                className="form-row"
              >
                <span
                  className="font-italic text-muted"
                />
                <div
                  className="col-12"
                >
                  <legend
                    id="root_operator_mailingAddress__title"
                  >
                    Operator Mailing Address
                  </legend>
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operator_mailingAddress_streetAddress"
                  >
                    Street address
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operator_mailingAddress_streetAddress"
                    label="Street address"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value="in qui"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operator_mailingAddress_city"
                  >
                    City
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operator_mailingAddress_city"
                    label="City"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value="mollit eu esse"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operator_mailingAddress_postalCode"
                  >
                    Postal Code
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operator_mailingAddress_postalCode"
                    label="Postal Code"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value="F3K 5C2"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operator_mailingAddress_province"
                  >
                    Province or Territory
                  </label>
                  <select
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operator_mailingAddress_province"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    value="Nova Scotia"
                  >
                    <option
                      value=""
                    >
                      
                    </option>
                    <option
                      value="Alberta"
                    >
                      Alberta
                    </option>
                    <option
                      value="British Columbia"
                    >
                      British Columbia
                    </option>
                    <option
                      value="Manitoba"
                    >
                      Manitoba
                    </option>
                    <option
                      value="New Brunswick"
                    >
                      New Brunswick
                    </option>
                    <option
                      value="Newfoundland and Labrador"
                    >
                      Newfoundland and Labrador
                    </option>
                    <option
                      value="Northwest Territories"
                    >
                      Northwest Territories
                    </option>
                    <option
                      value="Nova Scotia"
                    >
                      Nova Scotia
                    </option>
                    <option
                      value="Nunavut"
                    >
                      Nunavut
                    </option>
                    <option
                      value="Ontario"
                    >
                      Ontario
                    </option>
                    <option
                      value="Prince Edward Island"
                    >
                      Prince Edward Island
                    </option>
                    <option
                      value="Quebec"
                    >
                      Quebec
                    </option>
                    <option
                      value="Saskatchewan"
                    >
                      Saskatchewan
                    </option>
                    <option
                      value="Yukon"
                    >
                      Yukon
                    </option>
                  </select>
                  <span
                    className="font-italic text-muted"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <span
              className="font-italic text-muted"
            />
            <div
              className="col-12"
            >
              <legend
                id="root_operationalRepresentative__title"
              >
                Operational Representative
              </legend>
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_firstName"
              >
                First Name
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_firstName"
                label="First Name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="culpa"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_lastName"
              >
                Last Name
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_lastName"
                label="Last Name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="est dolor"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_position"
              >
                Position/Title
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_position"
                label="Position/Title"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="consequat Ut Duis"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_email"
              >
                Email Address
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_email"
                label="Email Address"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="in qui"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_phone"
              >
                Telephone Number
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_phone"
                label="Telephone Number"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="mollit eu esse"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_fax"
              >
                Fax Number
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_fax"
                label="Fax Number"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="culpa"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="col-12"
            >
              <div
                className="form-row"
              >
                <span
                  className="font-italic text-muted"
                />
                <div
                  className="col-12"
                >
                  <legend
                    id="root_operationalRepresentative_mailingAddress__title"
                  >
                    Operational Representative Mailing Address
                  </legend>
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operationalRepresentative_mailingAddress_streetAddress"
                  >
                    Street address
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operationalRepresentative_mailingAddress_streetAddress"
                    label="Street address"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value="culpa"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operationalRepresentative_mailingAddress_city"
                  >
                    City
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operationalRepresentative_mailingAddress_city"
                    label="City"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value="est dolor"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operationalRepresentative_mailingAddress_postalCode"
                  >
                    Postal Code
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operationalRepresentative_mailingAddress_postalCode"
                    label="Postal Code"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value="C2H 4N1"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operationalRepresentative_mailingAddress_province"
                  >
                    Province or Territory
                  </label>
                  <select
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operationalRepresentative_mailingAddress_province"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    value="Northwest Territories"
                  >
                    <option
                      value=""
                    >
                      
                    </option>
                    <option
                      value="Alberta"
                    >
                      Alberta
                    </option>
                    <option
                      value="British Columbia"
                    >
                      British Columbia
                    </option>
                    <option
                      value="Manitoba"
                    >
                      Manitoba
                    </option>
                    <option
                      value="New Brunswick"
                    >
                      New Brunswick
                    </option>
                    <option
                      value="Newfoundland and Labrador"
                    >
                      Newfoundland and Labrador
                    </option>
                    <option
                      value="Northwest Territories"
                    >
                      Northwest Territories
                    </option>
                    <option
                      value="Nova Scotia"
                    >
                      Nova Scotia
                    </option>
                    <option
                      value="Nunavut"
                    >
                      Nunavut
                    </option>
                    <option
                      value="Ontario"
                    >
                      Ontario
                    </option>
                    <option
                      value="Prince Edward Island"
                    >
                      Prince Edward Island
                    </option>
                    <option
                      value="Quebec"
                    >
                      Quebec
                    </option>
                    <option
                      value="Saskatchewan"
                    >
                      Saskatchewan
                    </option>
                    <option
                      value="Yukon"
                    >
                      Yukon
                    </option>
                  </select>
                  <span
                    className="font-italic text-muted"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <span
              className="font-italic text-muted"
            />
            <div
              className="col-12"
            >
              <legend
                id="root_facility__title"
              >
                Facility Information
              </legend>
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_facility_facilityName"
              >
                Facility Name
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_facility_facilityName"
                label="Facility Name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="mollit eu esse"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_facility_facilityType"
              >
                Facility Type
              </label>
              <select
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_facility_facilityType"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={false}
                value="SFO"
              >
                <option
                  value=""
                >
                  
                </option>
                <option
                  value="IF_a"
                >
                  IF_a
                </option>
                <option
                  value="IF_b"
                >
                  IF_b
                </option>
                <option
                  value="L_c"
                >
                  L_c
                </option>
                <option
                  value="SFO"
                >
                  SFO
                </option>
                <option
                  value="LFO"
                >
                  LFO
                </option>
                <option
                  value="EIO"
                >
                  EIO
                </option>
              </select>
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_facility_bcghgid"
              >
                BCGHG ID Number
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_facility_bcghgid"
                label="BCGHG ID Number"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="est dolor"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_facility_naics"
              >
                NAICS Code
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_facility_naics"
                label="NAICS Code"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="consequat Ut Duis"
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="col-12"
            >
              <div
                className="form-row"
              >
                <span
                  className="font-italic text-muted"
                />
                <div
                  className="col-12"
                >
                  <legend
                    id="root_facility_mailingAddress__title"
                  >
                    Facility Mailing Address
                  </legend>
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_facility_mailingAddress_streetAddress"
                  >
                    Street address
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_facility_mailingAddress_streetAddress"
                    label="Street address"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value="consequat Ut Duis"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_facility_mailingAddress_city"
                  >
                    City
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_facility_mailingAddress_city"
                    label="City"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value="in qui"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_facility_mailingAddress_postalCode"
                  >
                    Postal Code
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_facility_mailingAddress_postalCode"
                    label="Postal Code"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value="N1F 3K5"
                  />
                  <span
                    className="font-italic text-muted"
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_facility_mailingAddress_province"
                  >
                    Province or Territory
                  </label>
                  <select
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_facility_mailingAddress_province"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    value="New Brunswick"
                  >
                    <option
                      value=""
                    >
                      
                    </option>
                    <option
                      value="Alberta"
                    >
                      Alberta
                    </option>
                    <option
                      value="British Columbia"
                    >
                      British Columbia
                    </option>
                    <option
                      value="Manitoba"
                    >
                      Manitoba
                    </option>
                    <option
                      value="New Brunswick"
                    >
                      New Brunswick
                    </option>
                    <option
                      value="Newfoundland and Labrador"
                    >
                      Newfoundland and Labrador
                    </option>
                    <option
                      value="Northwest Territories"
                    >
                      Northwest Territories
                    </option>
                    <option
                      value="Nova Scotia"
                    >
                      Nova Scotia
                    </option>
                    <option
                      value="Nunavut"
                    >
                      Nunavut
                    </option>
                    <option
                      value="Ontario"
                    >
                      Ontario
                    </option>
                    <option
                      value="Prince Edward Island"
                    >
                      Prince Edward Island
                    </option>
                    <option
                      value="Quebec"
                    >
                      Quebec
                    </option>
                    <option
                      value="Saskatchewan"
                    >
                      Saskatchewan
                    </option>
                    <option
                      value="Yukon"
                    >
                      Yukon
                    </option>
                  </select>
                  <span
                    className="font-italic text-muted"
                  />
                </div>
              </div>
            </div>
            <div
              className="form-group field field-boolean form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_facility_isFacilityLocationDifferent"
              >
                Is the facility location different from the mailing address?
              </label>
              <div
                className="field-radio-group"
                id="root_facility_isFacilityLocationDifferent"
              >
                <div
                  className="radio "
                >
                  <label>
                    <span>
                      <input
                        autoFocus={false}
                        checked={false}
                        disabled={false}
                        name="0.1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        type="radio"
                        value={true}
                      />
                      <span>
                         Yes
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  className="radio "
                >
                  <label>
                    <span>
                      <input
                        autoFocus={false}
                        checked={true}
                        disabled={false}
                        name="0.1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        type="radio"
                        value={false}
                      />
                      <span>
                         No
                      </span>
                    </span>
                  </label>
                </div>
              </div>
              <span
                className="font-italic text-muted"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="jsx-2235865583 form-submit"
    >
      <div
        className="row"
      >
        <div
          className="col-md-3"
          style={
            Object {
              "lineHeight": "48px",
            }
          }
        >
          <a
            href="/reporter/user-dashboard"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Save & Exit
          </a>
        </div>
        <div
          className="col-md-9"
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <button
            className="btn btn-secondary btn-lg"
            disabled={false}
            style={
              Object {
                "marginRight": "10px",
              }
            }
            type="button"
          >
            Back
          </button>
          <button
            className="btn btn-primary btn-lg"
            disabled={false}
            type="submit"
          >
            Continue
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form should match the snapshot with the electricity and heat form 1`] = `
<div
  className="jsx-2235865583 "
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
      style={
        Object {
          "marginLeft": "25px",
        }
      }
    >
      <h1
        className="jsx-2235865583 form-title"
      >
        Electricity And Heat
      </h1>
    </div>
  </div>
  <form
    className="rjsf"
    noValidate={false}
    onSubmit={[Function]}
  >
    <div
      className="col-12"
    >
      <div
        className="form-row"
      >
        <span
          className="font-italic text-muted"
        />
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <span
              className="font-italic text-muted"
            />
            <div
              className="col-12"
            >
              <legend
                id="root_electricity__title"
              >
                Electricity
              </legend>
            </div>
            <div
              className="form-group field field-number form-group col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_electricity_purchased"
              >
                Purchased (MWh)
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_electricity_purchased"
                label="Purchased (MWh)"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                step="any"
                type="number"
                value={-40000000}
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-number form-group col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_electricity_generatedOnSite"
              >
                Generated On Site (MWh)
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_electricity_generatedOnSite"
                label="Generated On Site (MWh)"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                step="any"
                type="number"
                value={0}
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-number form-group col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_electricity_consumedOnSite"
              >
                Consumed On Site (MWh)
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_electricity_consumedOnSite"
                label="Consumed On Site (MWh)"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                step="any"
                type="number"
                value={-60000000}
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-number form-group col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_electricity_sold"
              >
                Sold (MWh)
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_electricity_sold"
                label="Sold (MWh)"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                step="any"
                type="number"
                value={-20000000}
              />
              <span
                className="font-italic text-muted"
              />
            </div>
          </div>
        </div>
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <span
              className="font-italic text-muted"
            />
            <div
              className="col-12"
            >
              <legend
                id="root_heat__title"
              >
                Heat
              </legend>
            </div>
            <div
              className="form-group field field-number form-group col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_heat_purchased"
              >
                Purchased (GJ)
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_heat_purchased"
                label="Purchased (GJ)"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                step="any"
                type="number"
                value={-40000000}
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-number form-group col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_heat_generatedOnSite"
              >
                Generated On Site (GJ)
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_heat_generatedOnSite"
                label="Generated On Site (GJ)"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                step="any"
                type="number"
                value={0}
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-number form-group col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_heat_consumedOnSite"
              >
                Consumed On Site (GJ)
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_heat_consumedOnSite"
                label="Consumed On Site (GJ)"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                step="any"
                type="number"
                value={-60000000}
              />
              <span
                className="font-italic text-muted"
              />
            </div>
            <div
              className="form-group field field-number form-group col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_heat_sold"
              >
                Sold (GJ)
                 *
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_heat_sold"
                label="Sold (GJ)"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={true}
                step="any"
                type="number"
                value={-20000000}
              />
              <span
                className="font-italic text-muted"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="jsx-2235865583 form-submit"
    >
      <div
        className="row"
      >
        <div
          className="col-md-3"
          style={
            Object {
              "lineHeight": "48px",
            }
          }
        >
          <a
            href="/reporter/user-dashboard"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Save & Exit
          </a>
        </div>
        <div
          className="col-md-9"
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <button
            className="btn btn-secondary btn-lg"
            disabled={false}
            style={
              Object {
                "marginRight": "10px",
              }
            }
            type="button"
          >
            Back
          </button>
          <button
            className="btn btn-primary btn-lg"
            disabled={false}
            type="submit"
          >
            Continue
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form should match the snapshot with the emission form 1`] = `
<div
  className="jsx-2235865583 emission-form no-col-padding"
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
      style={
        Object {
          "marginLeft": "25px",
        }
      }
    >
      <h1
        className="jsx-2235865583 form-title"
      >
        Emission
      </h1>
    </div>
  </div>
  <form
    className="rjsf"
    noValidate={false}
    onSubmit={[Function]}
  >
    <div
      className="col-12"
    >
      <div
        className="form-row"
      >
        <span
          className="font-italic text-muted"
        />
        <div
          className="col-12"
        >
          <span
            className="font-italic text-muted"
          />
          <div
            className="jsx-4148384647 field field-array field-array-of-object"
          >
            <div
              className="form-row"
            >
              <div
                className="col-md-12 col-12"
              >
                <div
                  className="col-12"
                >
                  <div
                    className="form-row"
                  >
                    <span
                      className="font-italic text-muted"
                    />
                    <div
                      className="form-group field field-string  hidden-title form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                    >
                      <label
                        className="form-label"
                        htmlFor="root_sourceTypes_0_sourceTypeName"
                      >
                        sourceTypeName
                      </label>
                      <div
                        className="row"
                        style={
                          Object {
                            "margin": "20px 0 20px 0",
                          }
                        }
                      >
                        <div
                          className="col-md-4 col-12"
                        >
                          <h5
                            className="jsx-2806087631"
                            style={
                              Object {
                                "textAlign": "left",
                              }
                            }
                          >
                            in qui
                          </h5>
                        </div>
                        <div
                          className="col-md-3 col-12"
                        >
                          <h6
                            className="jsx-2806087631"
                          >
                            Tonnes
                          </h6>
                        </div>
                        <div
                          className="col-md-2 col-12"
                        >
                          <h6
                            className="jsx-2806087631"
                          >
                            GWP
                          </h6>
                        </div>
                        <div
                          className="col-md-3 col-12"
                        >
                          <h6
                            className="jsx-2806087631"
                          >
                            Tonnes (CO2e)
                          </h6>
                        </div>
                      </div>
                      <span
                        className="font-italic text-muted"
                      />
                    </div>
                    <div
                      className="col-12"
                    >
                      <span
                        className="font-italic text-muted"
                      />
                      <div
                        className="jsx-4148384647 field field-array field-array-of-object"
                      >
                        <div
                          className="form-row"
                        >
                          <div
                            className="col-md-12 col-12"
                          >
                            <div
                              className="col-12"
                            >
                              <div
                                className="form-row"
                              >
                                <span
                                  className="font-italic text-muted"
                                />
                                <div
                                  className="visible emission-row col-md-12 col-12"
                                >
                                  <div
                                    className="form-row"
                                  >
                                    <div
                                      className="col-md-4"
                                    >
                                      consequat Ut Duis
                                       
                                      <br
                                        className="jsx-1154833918"
                                      />
                                      <div
                                        className="col-md-10"
                                        style={
                                          Object {
                                            "color": "#888",
                                            "lineHeight": "17px",
                                            "margin": 0,
                                            "padding": 0,
                                          }
                                        }
                                      >
                                        <small
                                          className="jsx-1154833918"
                                        >
                                          est dolor
                                        </small>
                                      </div>
                                    </div>
                                    <div
                                      className="col-md-3"
                                    >
                                      <input
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onKeyDown={[Function]}
                                        onMouseUp={[Function]}
                                        type="text"
                                        value="80,000,000"
                                      />
                                    </div>
                                    <div
                                      className="col-md-2"
                                      style={
                                        Object {
                                          "textAlign": "center",
                                        }
                                      }
                                    >
                                      <ul
                                        className="jsx-1154833918 gwp"
                                      >
                                        <li
                                          className="jsx-1154833918"
                                        >
                                          X
                                        </li>
                                        <li
                                          className="jsx-1154833918"
                                        >
                                          -40000000
                                        </li>
                                        <li
                                          className="jsx-1154833918"
                                        >
                                          =
                                        </li>
                                      </ul>
                                    </div>
                                    <div
                                      className="col-md-3"
                                      style={
                                        Object {
                                          "textAlign": "center",
                                        }
                                      }
                                    >
                                      <span>
                                        0
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <hr
                          className="jsx-4148384647"
                        />
                        <div
                          className="form-row"
                        >
                          <div
                            className="col-md-12 col-12"
                          >
                            <div
                              className="col-12"
                            >
                              <div
                                className="form-row"
                              >
                                <span
                                  className="font-italic text-muted"
                                />
                                <div
                                  className="visible emission-row col-md-12 col-12"
                                >
                                  <div
                                    className="form-row"
                                  >
                                    <div
                                      className="col-md-4"
                                    >
                                      mollit eu esse
                                       
                                      <br
                                        className="jsx-1154833918"
                                      />
                                      <div
                                        className="col-md-10"
                                        style={
                                          Object {
                                            "color": "#888",
                                            "lineHeight": "17px",
                                            "margin": 0,
                                            "padding": 0,
                                          }
                                        }
                                      >
                                        <small
                                          className="jsx-1154833918"
                                        >
                                          in qui
                                        </small>
                                      </div>
                                    </div>
                                    <div
                                      className="col-md-3"
                                    >
                                      <input
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onKeyDown={[Function]}
                                        onMouseUp={[Function]}
                                        type="text"
                                        value="0"
                                      />
                                    </div>
                                    <div
                                      className="col-md-2"
                                      style={
                                        Object {
                                          "textAlign": "center",
                                        }
                                      }
                                    >
                                      <ul
                                        className="jsx-1154833918 gwp"
                                      >
                                        <li
                                          className="jsx-1154833918"
                                        >
                                          X
                                        </li>
                                        <li
                                          className="jsx-1154833918"
                                        >
                                          -60000000
                                        </li>
                                        <li
                                          className="jsx-1154833918"
                                        >
                                          =
                                        </li>
                                      </ul>
                                    </div>
                                    <div
                                      className="col-md-3"
                                      style={
                                        Object {
                                          "textAlign": "center",
                                        }
                                      }
                                    >
                                      <span>
                                        -20,000,000
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <hr
                          className="jsx-4148384647"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              className="jsx-4148384647"
            />
            <div
              className="form-row"
            >
              <div
                className="col-md-12 col-12"
              >
                <div
                  className="col-12"
                >
                  <div
                    className="form-row"
                  >
                    <span
                      className="font-italic text-muted"
                    />
                    <div
                      className="form-group field field-string  hidden-title form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                    >
                      <label
                        className="form-label"
                        htmlFor="root_sourceTypes_1_sourceTypeName"
                      >
                        sourceTypeName
                      </label>
                      <div
                        className="row"
                        style={
                          Object {
                            "margin": "20px 0 20px 0",
                          }
                        }
                      >
                        <div
                          className="col-md-4 col-12"
                        >
                          <h5
                            className="jsx-2806087631"
                            style={
                              Object {
                                "textAlign": "left",
                              }
                            }
                          >
                            consequat Ut Duis
                          </h5>
                        </div>
                        <div
                          className="col-md-3 col-12"
                        >
                          <h6
                            className="jsx-2806087631"
                          >
                            Tonnes
                          </h6>
                        </div>
                        <div
                          className="col-md-2 col-12"
                        >
                          <h6
                            className="jsx-2806087631"
                          >
                            GWP
                          </h6>
                        </div>
                        <div
                          className="col-md-3 col-12"
                        >
                          <h6
                            className="jsx-2806087631"
                          >
                            Tonnes (CO2e)
                          </h6>
                        </div>
                      </div>
                      <span
                        className="font-italic text-muted"
                      />
                    </div>
                    <div
                      className="col-12"
                    >
                      <span
                        className="font-italic text-muted"
                      />
                      <div
                        className="jsx-4148384647 field field-array field-array-of-object"
                      >
                        <div
                          className="form-row"
                        >
                          <div
                            className="col-md-12 col-12"
                          >
                            <div
                              className="col-12"
                            >
                              <div
                                className="form-row"
                              >
                                <span
                                  className="font-italic text-muted"
                                />
                                <div
                                  className="visible emission-row col-md-12 col-12"
                                >
                                  <div
                                    className="form-row"
                                  >
                                    <div
                                      className="col-md-4"
                                    >
                                      est dolor
                                       
                                      <br
                                        className="jsx-1154833918"
                                      />
                                      <div
                                        className="col-md-10"
                                        style={
                                          Object {
                                            "color": "#888",
                                            "lineHeight": "17px",
                                            "margin": 0,
                                            "padding": 0,
                                          }
                                        }
                                      >
                                        <small
                                          className="jsx-1154833918"
                                        >
                                          culpa
                                        </small>
                                      </div>
                                    </div>
                                    <div
                                      className="col-md-3"
                                    >
                                      <input
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onKeyDown={[Function]}
                                        onMouseUp={[Function]}
                                        type="text"
                                        value="20,000,000"
                                      />
                                    </div>
                                    <div
                                      className="col-md-2"
                                      style={
                                        Object {
                                          "textAlign": "center",
                                        }
                                      }
                                    >
                                      <ul
                                        className="jsx-1154833918 gwp"
                                      >
                                        <li
                                          className="jsx-1154833918"
                                        >
                                          X
                                        </li>
                                        <li
                                          className="jsx-1154833918"
                                        >
                                          -80000000
                                        </li>
                                        <li
                                          className="jsx-1154833918"
                                        >
                                          =
                                        </li>
                                      </ul>
                                    </div>
                                    <div
                                      className="col-md-3"
                                      style={
                                        Object {
                                          "textAlign": "center",
                                        }
                                      }
                                    >
                                      <span>
                                        -40,000,000
                                      </span>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <hr
                          className="jsx-4148384647"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              className="jsx-4148384647"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="jsx-2235865583 form-submit"
    >
      <div
        className="row"
      >
        <div
          className="col-md-3"
          style={
            Object {
              "lineHeight": "48px",
            }
          }
        >
          <a
            href="/reporter/user-dashboard"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Save & Exit
          </a>
        </div>
        <div
          className="col-md-9"
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <button
            className="btn btn-secondary btn-lg"
            disabled={false}
            style={
              Object {
                "marginRight": "10px",
              }
            }
            type="button"
          >
            Back
          </button>
          <button
            className="btn btn-primary btn-lg"
            disabled={false}
            type="submit"
          >
            Continue
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form should match the snapshot with the fuel form 1`] = `"Cannot read property 'style' of null"`;

exports[`Form should match the snapshot with the production form 1`] = `"One or more options does not have a valid label string. Check the \`labelKey\` prop to ensure that it matches the correct option key and provides a string for filtering and display."`;
